# swiss-uhi-utils

./: .travis.yml  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
swiss_uhi_utils/: __init__.py  geo_utils.py  landsat.py  meteoswiss_grids.py  settings.py  stations.py
swiss_uhi_utils/cli/: main.py
