[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[yapf]
based_on_style = pep8
split_before_named_assigns = false

[isort]
known_first_party = swiss_uhi_utils
default_section = THIRDPARTY
forced_separate = test_swiss_uhi_utils

[bumpversion]
current_version = '0.0.1'
commit = True
tag = True

[bumpversion:file:setup.py]
[bumpversion:file:swiss_uhi_utils/__init__.py]
